# tradesim

./: .gitignore  README.md  meson.build  quotes.md
builddir/: build.ninja  compile_commands.json
builddir/meson-logs/: meson-log.txt
data/: com.github.horaciodrs.TradeSim.appdata.xml  com.github.horaciodrs.TradeSim.appdata.xml.in  com.github.horaciodrs.TradeSim.desktop  com.github.horaciodrs.TradeSim.desktop.in  com.github.horaciodrs.tradesim.appdata.xml.in  com.github.horaciodrs.tradesim.desktop.in  com.github.horaciodrs.tradesim.gresource.xml  com.github.horaciodrs.tradesim.gschema.xml  com.github.horaciodrs.tradesim.mime.xml  meson.build
data/css/: dialogs.css  layout.css  stylesheet.css
data/quotes/: quotes.db
data/quotes/EODATA/2020/EURUSD/: EODATA_EURUSD_D1_2020_01.csv  EODATA_EURUSD_D1_2020_02.csv  EODATA_EURUSD_D1_2020_03.csv  EODATA_EURUSD_D1_2020_04.csv  EODATA_EURUSD_D1_2020_05.csv  EODATA_EURUSD_D1_2020_06.csv  EODATA_EURUSD_D1_2020_07.csv  EODATA_EURUSD_D1_2020_08.csv
data/quotes/TRADESIM/2019/EURUSD/: TRADESIM_EURUSD_H1_2019_01.csv  TRADESIM_EURUSD_H1_2019_02.csv  TRADESIM_EURUSD_H1_2019_03.csv  TRADESIM_EURUSD_H1_2019_04.csv  TRADESIM_EURUSD_H1_2019_05.csv  TRADESIM_EURUSD_H1_2019_06.csv  TRADESIM_EURUSD_H1_2019_07.csv  TRADESIM_EURUSD_H1_2019_08.csv  TRADESIM_EURUSD_H1_2019_09.csv  TRADESIM_EURUSD_H1_2019_10.csv  TRADESIM_EURUSD_H1_2019_11.csv  TRADESIM_EURUSD_H1_2019_12.csv
data/quotes/TRADESIM/2019/GBPUSD/: TRADESIM_GBPUSD_H1_2019_01.csv  TRADESIM_GBPUSD_H1_2019_02.csv  TRADESIM_GBPUSD_H1_2019_03.csv  TRADESIM_GBPUSD_H1_2019_04.csv  TRADESIM_GBPUSD_H1_2019_05.csv  TRADESIM_GBPUSD_H1_2019_06.csv  TRADESIM_GBPUSD_H1_2019_07.csv  TRADESIM_GBPUSD_H1_2019_08.csv  TRADESIM_GBPUSD_H1_2019_09.csv  TRADESIM_GBPUSD_H1_2019_10.csv  TRADESIM_GBPUSD_H1_2019_11.csv  TRADESIM_GBPUSD_H1_2019_12.csv
data/quotes/TRADESIM/2020/EURUSD/: TRADESIM_EURUSD_H1_2020_01.csv  TRADESIM_EURUSD_H1_2020_02.csv  TRADESIM_EURUSD_H1_2020_03.csv  TRADESIM_EURUSD_H1_2020_04.csv  TRADESIM_EURUSD_H1_2020_05.csv  TRADESIM_EURUSD_H1_2020_06.csv  TRADESIM_EURUSD_H1_2020_07.csv  TRADESIM_EURUSD_H1_2020_08.csv  TRADESIM_EURUSD_H1_2020_09.csv  TRADESIM_EURUSD_H1_2020_10.csv  TRADESIM_EURUSD_H1_2020_11.csv  TRADESIM_EURUSD_H1_2020_12.csv
data/quotes/TVIEW/2020/EURUSD/: TRADINGVIEW_EURUSD_M1_2020_01.csv
debian/: changelog  control  copyright
meson/: post_install.py
po/: POTFILES  com.github.horaciodrs.TradeSim.pot  com.github.horaciodrs.tradesim.pot  es.po  meson.build
src/: Application.vala  Main.vala  Window.vala  meson.build
src/Dialogs/: AlertDialog.vala  DrawEditDialog.vala  NewChartDialog.vala  NewOperationDialog.vala  SettingsDialog.vala
src/Drawings/: DrawHandler.vala  Fibonacci.vala  HLine.vala  Line.vala  OperationBox.vala  OperationInfo.vala  Rectangle.vala
src/Drawings/Indicators/: BollingerBands.vala  Indicator.vala  MacD.vala  Rsi.vala  Sma.vala
src/Layouts/: HeaderBar.vala  Main.vala  Welcome.vala
src/Objects/: CanvasData.vala  OperationItem.vala  Provider.vala  ProviderTicker.vala  Ticker.vala
src/Services/: Database.vala  Drawings.vala  FileReader.vala  OperationsManager.vala  QuoteItem.vala  QuotesManager.vala
src/Utils/: Color.vala  ColorPalette.vala  Utilities.vala
src/Widgets/: ButtonImage.vala  Canvas.vala  CanvasContainer.vala  DrawingsPanel.vala  DrawingsPanelItem.vala  HeaderBarButton.vala  MenuButton.vala  OperationsPanel.vala  OscilatorCanvas.vala  ProvidersPanel.vala  TimeButton.vala  ZoomButton.vala
