#install_data(
#    join_paths('icons', 'icono-test.png'),
#    install_dir: join_paths(get_option('datadir'), 'testResource')
#)

install_data(
    'css/artboard.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/colors.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/dialogs.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/headerbar.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/layer.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/layout.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/option-panel.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/stylesheet.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)

install_data(
    'css/variables.css',
    install_dir: join_paths(get_option('datadir'), 'com.github.horaciodrs.TradeSim')
)
