sources = files(
    'Utils/Utilities.vala',
    'Utils/Color.vala',
    'Utils/ColorPalette.vala',

    'Objects/OperationItem.vala',
    'Objects/ProviderTicker.vala',
    'Objects/Provider.vala',
    'Objects/Ticker.vala',
    'Objects/CanvasData.vala',

    'Drawings/Line.vala',
    'Drawings/Fibonacci.vala',
    'Drawings/Rectangle.vala',
    'Drawings/HLine.vala',
    'Drawings/OperationBox.vala',
    'Drawings/OperationInfo.vala',
    'Drawings/DrawHandler.vala',
    'Drawings/Indicators/Indicator.vala',
    'Drawings/Indicators/Sma.vala',
    'Drawings/Indicators/BollingerBands.vala',

    'Services/Drawings.vala',
    'Services/Database.vala',
    'Services/QuoteItem.vala',
    'Services/QuotesManager.vala',
    'Services/OperationsManager.vala',
    'Services/FileReader.vala',

    'Layouts/Welcome.vala',
    'Layouts/HeaderBar.vala',
    'Layouts/Main.vala',

    'Widgets/DrawingsPanelItem.vala',
    'Widgets/MenuButton.vala',
    'Widgets/ButtonImage.vala',
    'Widgets/HeaderBarButton.vala',
    'Widgets/ZoomButton.vala',
    'Widgets/ProvidersPanel.vala',
    'Widgets/OperationsPanel.vala',
    'Widgets/DrawingsPanel.vala',
    'Widgets/CanvasContainer.vala',
    'Widgets/Canvas.vala',
    'Widgets/OscilatorCanvas.vala',

    'Dialogs/DrawEditDialog.vala',
    'Dialogs/NewOperationDialog.vala',
    'Dialogs/NewChartDialog.vala',
    'Dialogs/SettingsDialog.vala',
    'Dialogs/AlertDialog.vala',

    'Window.vala',
    'Application.vala',
    'Main.vala'
)
